# yaqlite

./: Cargo.toml  Idea.txt  Makefile  Notes.txt  README.md  test.yml  test2.yml
doc/: yaqlite.1.txt
share/man/man1/: yaqlite.1
src/: insert.rs  lib.rs  main.rs  select.rs  sqlite.rs  update.rs  yaml.rs
src/yaml/: sql.rs  write.rs
